-------------------------- aqp 1.3-2 (2012-11-01) --------------------------
* minor tweaks to plot.SoilProfileCollection() for improved output with small/large size collections
* new function get.ml.hz() attempts to determine the most likely horizonation after slabbing
* fixed bug in profileApply() where further arguments to FUN weren't passed on to FUN

-------------------------- aqp 1.3-1 (2012-10-17) --------------------------
* speed-bump in profileApply()
  - splitProfiles() function is no longer defined/used/needed
* bug fix in SoilProfileCollection subsetting via []
  - SoilProfiles with a single horizon confused subsetting in the presence of spatial data

-------------------------- aqp 1.3 (2012-10-07) --------------------------
* added rbind.SoilProfileCollection() for concatenating SPC objects
  - this function performs basic sanity checks, but cannot combine unlike objects

-------------------------- aqp 1.2-10 (2012-09-05) --------------------------
* fixed minor bug in prepanel.depth_function() where an error would occur when input data was all NA

-------------------------- aqp 1.2-9 (2012-08-31) --------------------------
* new 'unique' method for SoilProfileCollection objects, returns indices of unique profiles
* fixed bug in NAMESPACE that caused an error when 'sp' library wasn't loaded
* added another sanity check to 'site<-' for cases where duplicates occur in the source data set
* added some new documentation to package help page see 'help(aqp)' for details

-------------------------- aqp 1.2-8 (2012-08-28) --------------------------
* the names() method for SoilProfileCollection objects now returns a named list of horizon and site column names
* improved examples: see ?sp4 and ?ca630
* fixed minor bug related to subsetting a SoilProfileCollection object, followed by coercion to SpatialPointsDataFrame

-------------------------- aqp 1.2-7 (2012-08-23) --------------------------